# MStarPlayer

./: .clang-format  .gitignore  AudioPlayerJuce.jucer  CMakeLists.txt  Changelog.md  MStarPlayer.jucer  README.md  appveyor.yml  format-source.bat  format-source.ps1  mstarplayer.nuspec
.github/workflows/: cmake.yml  release.yml
Documentation/: Testplan.md
Icons/: sources.txt
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
JuceLibraryCode/modules/juce_audio_basics/sources/: juce_ChannelRemappingAudioSource.cpp
JuceLibraryCode/modules/juce_audio_devices/native/: juce_ios_Audio.cpp  juce_mac_CoreAudio.cpp
JuceLibraryCode/modules/juce_audio_processors/: juce_module_info
JuceLibraryCode/modules/juce_audio_processors/format_types/: juce_AudioUnitPluginFormat.mm
JuceLibraryCode/modules/juce_audio_processors/scanning/: juce_PluginListComponent.cpp
JuceLibraryCode/modules/juce_audio_utils/: juce_module_info
JuceLibraryCode/modules/juce_audio_utils/gui/: juce_AudioDeviceSelectorComponent.cpp
JuceLibraryCode/modules/juce_core/text/: juce_LocalisedStrings.cpp  juce_LocalisedStrings.h
JuceLibraryCode/modules/juce_cryptography/: juce_module_info
JuceLibraryCode/modules/juce_data_structures/: juce_module_info
JuceLibraryCode/modules/juce_graphics/: juce_module_info
JuceLibraryCode/modules/juce_graphics/fonts/: juce_Typeface.h
JuceLibraryCode/modules/juce_graphics/native/: juce_android_Fonts.cpp  juce_mac_Fonts.mm  juce_win32_DirectWriteTypeface.cpp
JuceLibraryCode/modules/juce_gui_basics/: juce_module_info
JuceLibraryCode/modules/juce_gui_basics/components/: juce_Component.cpp
JuceLibraryCode/modules/juce_gui_extra/: juce_module_info
JuceLibraryCode/modules/juce_gui_extra/code_editor/: juce_CodeEditorComponent.cpp
JuceLibraryCode/modules/juce_opengl/: juce_module_info
JuceLibraryCode/modules/juce_video/: juce_module_info
Source/: AppLookAndFeelInterface.h  AudioConfiguration.cpp  AudioConfiguration.h  AudioDeviceComponent.cpp  AudioDeviceComponent.h  CDNamesComboBox.cpp  CDNamesComboBox.h  CDPlayer.cpp  CDPlayer.h  CDTracksModel.cpp  CDTracksModel.h  CDTracksTable.cpp  CDTracksTable.h  ChangeableArrowButton.cpp  ChangeableArrowButton.h  ChannelMapping.cpp  ChannelMapping.h  ChannelMappingDialog.cpp  ChannelMappingDialog.h  ChannelMixerControlable.cpp  ChannelMixerControlable.h  ChannelMixerFader.cpp  ChannelMixerFader.h  ChannelRemappingAudioSourceWithVolume.cpp  ChannelRemappingAudioSourceWithVolume.h  ChannelVolumeAudioSource.cpp  ChannelVolumeAudioSource.h  CrashDumper.cpp  CrashDumper.h  DarkLookAndFeel.cpp  DarkLookAndFeel.h  DefaultLookAndFeel.cpp  DefaultLookAndFeel.h  EditSettings.cpp  EditSettings.h  EditSettingsDialog.cpp  EditSettingsDialog.h  InterPlayerCommunication.h  JinglePlayerWindow.cpp  JinglePlayerWindow.h  (+86 more)
Translations/: German.txt
